Added FTP service. Sorted code into packages. Moved a lot of things around to make a much more cleaner working environment